<resources>
    <string name="app_name" translatable="false">Independent News</string>
    <string name="fragment_today_articles">Today Articles</string>
    <string name="activity_first_start_button">Who owns what ?</string>
    <string name="activity_first_start_text">First Start !</string>
    <string name="activity_first_start_fetch_time">This could take a few minutes to fetch data, depends of your network connection !\nLooks for who owns what !</string>
    <string name="activity_first_start_ask_permissions">This application need permissions to properly work !\n\n- Network state (to know if there\'s an available connexion)\n- Internet (to access network)\n- Boot complete (for notifications and refresh data)</string>
    <string name="activity_first_start_ask_permissions_oreo">This application need permissions to properly work !\n\n- Network state (to know if there\'s an available connexion)\n- Internet (to access network)\n- Boot complete (for notifications and refresh data)\n- Background data (for automatic refresh data)</string>
    <string name="activity_first_start_toast_perm_refused">Permissions refused !!</string>
    <string name="dialog_cant_start_message">This application need internet connexion for it\'s first start. Check your connexion and retry, or try later if you can\'t get a connexion for now.</string>
    <string name="dialog_cant_start_retry">Retry</string>
    <string name="dialog_cant_start_quit">Quit</string>
    <string name="dialog_fetch_source_error_title">Error !</string>
    <string name="dialog_fetch_source_error_message">An error happened while fetching data. This application need theses data to properly work. Try again, if the problem persist, <a href="https://github.com/desperu/IndependentNews/issues">open an issue on github.com</a>.</string>
    <string name="showcase_button_who_owns_what">Tap to see Who owns what ?</string>
    <string name="fragment_article_list_no_article">No article find !</string>
    <string name="activity_main_dialog_about_title">About</string>
    <string name="activity_main_dialog_about_message">"<p>This application is developed by Desperu.\nSource code on <a href="https://github.com/desperu/IndependentNews">github.com</a>.\n\nIf you have an issue with this application, please search <a href="https://github.com/desperu/IndependentNews/issues">here</a>", create a new issue if there isn't yours. \nYou must create an account if you haven't.\n\nYou need help to use Independent News application?\nFind the documentation "<a href="https://github.com/desperu/IndependentNews/blob/master/Documentation/Documentation%20Fonctionnelle%20Independent%20News.pdf">here</a>.</p>"</string>
    <string name="activity_main_dialog_about_positive_button" translatable="false">OK</string>
    <string name="snack_bar_message_source_fetch">Fetching informations for source : %1$s</string>
    <string name="snack_bar_message_source_error">Error while fetching informations for source : %1$s</string>
    <string name="snack_bar_message_search_articles">Search new articles for : %1$s</string>
    <string name="snack_bar_message_find_articles">%1$s new articles find : %2$s</string>
    <string name="snack_bar_message_fetch_list">Fetching %1$s articles : (%2$s/%3$s)</string>
    <string name="snack_bar_message_end">Find %1$s new articles !</string>
    <string name="snack_bar_message_not_find">No new article find !</string>
    <string name="snack_bar_message_error">Error while fetching articles for : %1$s</string>
    <string name="snack_bar_button_show">Show</string>
    <string name="snack_bar_button_close">Close</string>
    <string name="snack_bar_button_retry">Retry</string>
    <string name="show_article_activity_article_error">Error, failed to retrieved article !</string>
    <string name="sub_fab_label_min_text">Minus text size</string>
    <string name="sub_fab_label_up_text">Up text size</string>
    <string name="sub_fab_label_star">Add favorite</string>
    <string name="sub_fab_label_remove_star">Remove Favorite</string>
    <string name="sub_fab_label_pause">Pause reading</string>
    <string name="sub_fab_label_remove_pause">Remove Pause</string>
    <string name="sub_fab_label_home">Back home</string>
    <string name="sub_fab_toast_remove_favorite">Article removed from favorites!</string>
    <string name="sub_fab_toast_remove_paused">Article removed from paused!</string>
    <string name="filter_layout_sources_bastamag">Basta !</string>
    <string name="filter_layout_sources_reporterre">Reporterre</string>
    <string name="filter_layout_sources_multinational">Observatoire des Multinationales</string>
    <string name="filter_layout_themes_ecology">Ecology</string>
    <string name="filter_layout_themes_social">Social</string>
    <string name="filter_layout_themes_economy">Economy</string>
    <string name="filter_layout_themes_politic">Politic</string>
    <string name="filter_layout_themes_international">International</string>
    <string name="filter_layout_themes_energy">Energy</string>
    <string name="filter_layout_themes_agriculture">Agriculture</string>
    <string name="filter_layout_themes_health">Health</string>
    <string name="filter_layout_sections_alternatives">Alternatives</string>
    <string name="filter_layout_sections_decrypt">Decrypt</string>
    <string name="filter_layout_sections_resist">Resist</string>
    <string name="filter_layout_sections_discuss">Discuss</string>
    <string name="filter_layout_sections_chronicle">Chronicle</string>
    <string name="filter_layout_dates_text_begin">Begin Date</string>
    <string name="filter_layout_dates_text_end">End Date</string>
    <string name="activity_settings_text_category_notification" translatable="false">Notifications</string>
    <string name="activity_settings_text_notifications_state">Enable notifications</string>
    <string name="activity_settings_text_notifications_description">Sent a notification every days, to show the new articles number, at the specified time.</string>
    <string name="activity_settings_text_notifications_time">Notifications Time</string>
    <string name="activity_settings_text_notifications_time_description">Set notification time (default is 12am).</string>
    <string name="activity_settings_text_category_article">Article</string>
    <string name="activity_settings_text_article_text_size">Article text size</string>
    <string name="activity_settings_text_article_text_size_description">Set article text size, in percent, default 100, min 1, max 200.</string>
    <string name="activity_settings_text_article_auto_remove_pause">Auto Remove Pause</string>
    <string name="activity_settings_text_article_auto_remove_pause_description">When you reach the bottom of a paused article, auto remove it from paused.</string>
    <string name="activity_settings_text_category_data_management">Data Management</string>
    <string name="activity_settings_text_refresh_article_list">Refresh articles list every days</string>
    <string name="activity_settings_text_refresh_article_list_description">Refresh article list every days, at the specified time.</string>
    <string name="activity_settings_text_refresh_article_list_time">Refresh article list time</string>
    <string name="activity_settings_text_refresh_article_list_time_description">Set refresh article list time (default is 11am).</string>
    <string name="activity_settings_text_refresh_only_wifi">Refresh article list only on Wifi</string>
    <string name="activity_settings_text_refresh_only_wifi_description">Refresh article list only on Wifi network connexion. If checked and there no Wifi connexion established at the refresh article list time, the application can\'t refresh article list data.</string>
    <string name="activity_settings_text_article_store_delay">Article store delay</string>
    <string name="activity_settings_text_article_store_delay_description">Set the delay to store article in the application, in month, default is 6, min 1, max 24.</string>
    <string name="activity_settings_text_category_reset_settings">Reset Settings</string>
    <string name="activity_settings_text_reset_settings">Reset Settings</string>
    <string name="activity_settings_text_reset_settings_description">Reset settings to original state.</string>
    <string name="activity_settings_dialog_reset_settings_message">Are you sure you want reset settings to default?</string>
    <string name="activity_settings_dialog_positive_button" translatable="false">OK</string>
    <string name="activity_settings_dialog_negative_button">Cancel</string>
    <string name="activity_settings_toast_time_wrong_value">%1$s must be under %2$d and %3$d !</string>
    <string name="activity_settings_toast_reset_settings_default">Settings Reset to default !</string>
    <string name="navigation_drawer_top_story">Top Story</string>
    <string name="navigation_drawer_categories">Categories</string>
    <string name="navigation_drawer_all_articles">All Articles</string>
    <string name="navigation_drawer_category_utilities">Utilities</string>
    <string name="navigation_drawer_search">Search</string>
    <string name="navigation_drawer_sources">Sources</string>
    <string name="navigation_drawer_user_articles">My Articles</string>
    <string name="navigation_drawer_refresh_data">Refresh Data</string>
    <string name="navigation_drawer_notification">Notification</string>
    <string name="navigation_drawer_category_parameter">Parameters</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_about">About</string>
    <string name="navigation_drawer_help">Help</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="activity_main_search_view_hint">Search article</string>
    <string name="dialog_no_connexion_title">No Connexion</string>
    <string name="dialog_no_connexion_message">No internet connexion available. Check your connectivity state.</string>
    <string name="dialog_remove_paused_title">Remove Paused article</string>
    <string name="dialog_remove_paused_message">Remove this article from paused articles? You\'ve reach the bottom !</string>
    <string name="dialog_remove_paused_neutral_button">Always</string>
    <string name="dialog_cant_parse_title">Can\'t Parse !</string>
    <string name="dialog_cant_parse_message">This application can only parse included source web page. This url is not supported !</string>
    <string name="notification_title">Today Articles !</string>
    <string name="notification_text">%1$s articles published today !</string>
    <string name="notification_text_no_today_articles">No article published today…</string>
    <string name="intent_chooser_send_mail_title">Send mail !</string>
    <string name="intent_chooser_share_article_title">Share article !</string>
    <string name="animation_main_to_show_article" translatable="false">ImageAnimationMainToShowArticle</string>
    <string name="animation_source_list_to_detail_container" translatable="false">ImageAnimationSourceListToDetailContainer</string>
    <string name="animation_source_list_to_detail_image" translatable="false">ImageAnimationSourceListToDetailImage</string>
    <string name="AnnieUseYourTelescope_Regular" translatable="false">AnnieUseYourTelescope-Regular</string>
</resources>