<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/activity_main_menu_drawer_top_story"
            android:icon="@drawable/ic_baseline_fiber_new_white_24"
            android:title="@string/navigation_drawer_top_story"/>

        <item
            android:id="@+id/activity_main_menu_drawer_categories"
            android:icon="@drawable/ic_baseline_category_white_24"
            android:title="@string/navigation_drawer_categories"/>

        <item
            android:id="@+id/activity_main_menu_drawer_all_articles"
            android:icon="@drawable/ic_baseline_all_inclusive_white_24"
            android:title="@string/navigation_drawer_all_articles"/>

    </group>

    <item android:title="@string/navigation_drawer_category_utilities">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/activity_main_menu_drawer_search"
                    android:icon="@drawable/ic_baseline_search_white_24"
                    android:title="@string/navigation_drawer_search"
                    android:visible="false"/>

                <item
                    android:id="@+id/activity_main_menu_drawer_sources"
                    android:icon="@drawable/ic_baseline_menu_book_white_24"
                    android:title="@string/navigation_drawer_sources"/>

                <item
                    android:id="@+id/activity_main_menu_drawer_user_article"
                    android:icon="@drawable/ic_baseline_star_black_18"
                    android:title="@string/navigation_drawer_user_articles"/>

                <item
                    android:id="@+id/activity_main_menu_drawer_refresh_data"
                    android:icon="@drawable/ic_baseline_refresh_white_24"
                    android:title="@string/navigation_drawer_refresh_data"/>

                <item
                    android:id="@+id/activity_main_menu_drawer_notification"
                    android:icon="@drawable/ic_baseline_notifications_active_white_24"
                    android:title="@string/navigation_drawer_notification"
                    android:visible="false"/>

            </group>

        </menu>

    </item>

    <item android:title="@string/navigation_drawer_category_parameter">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/activity_main_menu_drawer_settings"
                    android:icon="@drawable/ic_baseline_settings_applications_round_white_24"
                    android:title="@string/navigation_drawer_settings"/>

                <item
                    android:id="@+id/activity_main_drawer_about"
                    android:icon="@drawable/ic_baseline_more_horiz_white_24"
                    android:title="@string/navigation_drawer_about"/>

                <item
                    android:id="@+id/activity_main_drawer_help"
                    android:icon="@drawable/ic_baseline_help_white_24"
                    android:title="@string/navigation_drawer_help"/>

            </group>

        </menu>

    </item>

</menu>