<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/colorPrimaryDark"
    tools:layout_height="@dimen/sheet_peek_height">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/filter_layout_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/filter_first_linear_margin_top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/filter_alternatives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_layout_sections_alternatives"
                style="@style/FilterPillStyle"/>

            <TextView
                android:id="@+id/filter_decrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/filter_pill_margin_start"
                android:text="@string/filter_layout_sections_decrypt"
                style="@style/FilterPillStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/filter_linear_margin_top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/filter_resist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_layout_sections_resist"
                style="@style/FilterPillStyle"/>

            <TextView
                android:id="@+id/filter_discuss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/filter_pill_margin_start"
                android:text="@string/filter_layout_sections_discuss"
                style="@style/FilterPillStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/filter_linear_margin_top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/filter_chronicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_layout_sections_chronicle"
                style="@style/FilterPillStyle"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>