<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/colorPrimaryDark"
    tools:layout_height="@dimen/sheet_peek_height">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/filter_layout_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/filter_first_linear_margin_top">

            <TextView
                android:id="@+id/filter_bastamag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_layout_sources_bastamag"
                style="@style/FilterPillStyle"/>

            <TextView
                android:id="@+id/filter_reporterre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_layout_sources_reporterre"
                android:layout_alignParentEnd="true"
                style="@style/FilterPillStyle"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/filter_multinational"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_layout_sources_multinational"
                style="@style/FilterPillStyle"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>