<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/first_start_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.firstStart.FirstStartActivity">

    <org.desperu.independentnews.views.FontTextView
        android:id="@+id/first_start_who_owns_what"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_large_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:visibility="invisible"
        android:textColor="@color/list_item_bg_collapsed"
        android:textSize="@dimen/first_start_sub_text_size"
        android:text="@string/activity_first_start_button"
        android:fontFamily="Annie_use_your_telescope"
        android:drawableEnd="@drawable/ic_outline_info_24"
        android:drawablePadding="@dimen/default_margin"
        android:onClick="onClickInfo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/first_start_who_owns_what">

        <ImageView
            android:id="@+id/first_start_app_logo"
            android:layout_width="@dimen/first_start_logo_width_height"
            android:layout_height="@dimen/first_start_logo_width_height"
            app:srcCompat="@drawable/app_logo"/>

        <org.desperu.independentnews.views.FontTextView
            android:id="@+id/first_start_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/list_item_bg_collapsed"
            android:textSize="@dimen/first_start_app_text_size"
            android:text="@string/app_name"
            app:fontName="Annie_use_your_telescope"/>

        <org.desperu.independentnews.views.FontTextView
            android:id="@+id/first_start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/default_large_margin"
            android:textColor="@color/list_item_bg_collapsed"
            android:textSize="@dimen/first_start_sub_text_size"
            android:text="@string/activity_first_start_text"
            app:fontName="Annie_use_your_telescope"/>

        <org.desperu.independentnews.views.FontTextView
            android:id="@+id/first_start_text_fetch_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/default_large_margin"
            android:paddingHorizontal="@dimen/default_margin"
            android:visibility="invisible"
            android:textColor="@color/list_item_bg_collapsed"
            android:textSize="@dimen/default_title_size"
            android:text="@string/activity_first_start_fetch_time"
            app:fontName="Annie_use_your_telescope"/>

    </LinearLayout>

</RelativeLayout>